--- a/cash/static/cash/style.css
+++ b/cash/static/cash/style.css
@@ -1,3 +1,43 @@
-li a {
-    color: green;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial;
+  background: #f1f1f1;
+}
+
+#header {
+  background-color: #f1f1f1;
+  text-align: center;
+}
+
+/* 导航条 */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* 导航条链接 */
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* 链接颜色修改 */
+.topnav  a:focus,
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
 }
