--- a/cash/templates/cash/cashindex.html
+++ b/cash/templates/cash/cashindex.html
@@ -1,14 +1,41 @@
-{% extends "base.html" %}
+{% extends "base1.html" %}
 
 {% block title %}Cash On Hand{% endblock %}
 
 {% block content %}
 {% if cash_list %}
-<ul>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th width="100px">业务日期</th>
+        <th width="40px">序号</th>
+        <th>摘要</th>
+        <th width="80px">收入</th>
+        <th width="80px">支出</th>
+        <th width="80px">余额</th>
+        <th width="100px">对方科目</th>
+        <th width="80px">业务员</th>
+        <th width="100px">操作</th>
+    </tr>
+    </thead>
+    <tbody>
     {% for cash in cash_list %}
-    <li>{{ cash.summary }}</li>
+    <tr>
+        <td>{{ cash.operation_date|date:"Y-n-j" }}</td>
+        <td>{{ cash.serial_number }}</td>
+        <td>{{ cash.summary}}</td>
+        <td>{% if cash.opposite_account.debit_balance == False %}{{ cash.lucre }}{% endif %}</td>
+        <td>{% if cash.opposite_account.debit_balance == True %}{{ cash.lucre }}{% endif %}</td>
+        <td>{{ cash.balance }}</td>
+        <td>{{ cash.opposite_account.accounting_subject }}</td>
+        <td></td>
+        <td></td>
+    </tr>
     {% endfor %}
-</ul>
+    </tbody>
+</table>
+
 {% else %}
 <p>No cash are available.</p>
 {% endif %}
