--- a/cash/templates/base1.html
+++ b/cash/templates/base1.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>{% block title %}ERP{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <title>{% block title %}ERP{% endblock %}</title>
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </head>
 <body>
 
-<div id="header">
+<div class="jumbotron text-center" style="margin-bottom:0">
     <h1>EPR</h1>
-    <div>
-        <a href="{% url 'cash:index'%}">cash</a>
-        <a href="{% url 'cash:detail' 1 %}">detail</a>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index'%}">cash</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index' %}">detail</a>
+        </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index'%}">cash</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index'  %}">detail</a>
+        </li>
+    </ul>
+</nav>
+
+<div class="container-fluid" style="margin-top:30px">
+    <div class="row">
+        <div class="col">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 </div>
 
-<div id="content">
-    {% block content %}{% endblock %}
-</div>
-
-<div id="footer">
+<div class="jumbotron text-center" style="margin-bottom:0">
     <h2>Django</h2>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 </html>
