--- a/cash/templates/base.html
+++ b/cash/templates/base.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'cash/style.css' %}">
     <title>{% block title %}ERP{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </head>
 <body>
 
-<div id="header">
+<div class="jumbotron text-center" style="margin-bottom:0">
     <h1>EPR</h1>
-    <div class="topnav">
-        <a href="{% url 'cash:index'%}">cash</a>
-        <a href="{% url 'cash:detail' 1 %}">detail</a>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index'%}">cash</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index' %}">detail</a>
+        </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index'%}">cash</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cash:index'  %}">detail</a>
+        </li>
+    </ul>
+</nav>
+
+<div class="container-fluid" style="margin-top:30px">
+    <div class="row">
+        <div class="col">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 </div>
 
-<div id="content">
-    {% block content %}{% endblock %}
-</div>
-
-<div id="footer">
+<div class="jumbotron text-center" style="margin-bottom:0">
     <h2>Django</h2>
 </div>
 
