--- a/cash/templates/cash/cashindex.html
+++ b/cash/templates/cash/cashindex.html
@@ -1,9 +1,9 @@
-{% extends "base1.html" %}
+{% extends "base.html" %}
 
 {% block title %}Cash On Hand{% endblock %}
 
 {% block content %}
-您的位置：库存现金收支明细表 <a href="{% url 'cash:index'%}">添加</a>
+您的位置：库存现金收支明细表 <a href="{% url 'cash:add'%}">添加</a>
 {% if cash_list %}
 <table class="table table-striped">
     <thead>
@@ -23,14 +23,14 @@
     {% for cash in cash_list %}
     <tr>
         <td>{{ cash.operation_date|date:"Y-n-j" }}</td>
-        <td>{{ cash.serial_number }}</td>
-        <td>{{ cash.summary}}</td>
+        <td><a href="{% url 'cash:detail' cash.id %}">{{ cash.serial_number }}</a></td>
+        <td><a href="{{ cash.get_absolute_url }}">{{ cash.summary }}</a></td>
         <td>{% if cash.opposite_account.debit_balance == False %}{{ cash.lucre }}{% endif %}</td>
         <td>{% if cash.opposite_account.debit_balance == True %}{{ cash.lucre }}{% endif %}</td>
         <td>{{ cash.balance }}</td>
         <td>{{ cash.opposite_account.accounting_subject }}</td>
         <td></td>
-        <td></td>
+        <td><a href="{% url 'cash:edit' cash.id %}">修改</a><a href="{% url 'cash:delete' cash.id %}">删除</a></td>
     </tr>
     {% endfor %}
     </tbody>
