--- a/cash/templates/cash/cashonhand_update_form.html
+++ b/cash/templates/cash/cashonhand_update_form.html
@@ -6,7 +6,9 @@
 修改现金收支
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    <table class="table">
+        {{ form.as_table }}
+    </table>
     <input type="submit" value="保存">
 </form>
 {% endblock %}
