--- a/cash/templates/registration/login.html
+++ b/cash/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
 
 {% if form.errors %}
@@ -15,7 +17,7 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
+<form method="post" action="{% url 'cash:login' %}">
 {% csrf_token %}
 <table>
 <tr>
@@ -33,6 +35,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'cash:password_reset' %}">Lost password?</a></p>
 
 {% endblock %}
