--- a/cash/templates/cash/child1.html
+++ b/cash/templates/cash/child1.html
@@ -3,5 +3,5 @@
 {% block title %}My amazing blog in child{% endblock %}
 
 {% block content %}
-<h2>hello world</h2>
+<h2>hello world 1</h2>
 {% endblock %}
