--- a/cash/templates/registration/logged_out.html
+++ b/cash/templates/registration/logged_out.html
@@ -3,5 +3,5 @@
 {% block title %}My amazing blog in child{% endblock %}
 
 {% block content %}
-<h2>hello world</h2>
+<h2>hello world Logout</h2>
 {% endblock %}
